--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,35 +18,37 @@ html
                         a.nav-link(href='/posts/add') Create Post
                 else
                     li.nav-item
-                        a.nav-link(href='/user/signup') Create Post
+                        a.nav-link(href='/users/signup') Create Post
 
             ul.navbar-nav.ml-auto
                 if user
                     li.nav-item.ml-1.my-1.mr-2
                         button.btn.btn-sm.btn-outline-primary(onclick="location.href = '/posts/myposts';") My Posts
                     li.nav-item.ml-auto.my-1.mr-1
-                        button.btn.btn-sm.btn-danger(onclick="location.href = '/user/logout';") Logout
+                        button.btn.btn-sm.btn-danger(onclick="location.href = '/users/logout';") Logout
                 else
                     li.nav-item.ml-auto.my-1.mr-1
-                        button.btn.btn-sm.btn-outline-primary(onclick="location.href = '/user/login';") LOGIN
+                        button.btn.btn-sm.btn-outline-primary(onclick="location.href = '/users/login';") LOGIN
                     li.nav-item.ml-1.my-1.mr-2
-                        button.btn.btn-sm.btn-primary(onclick="location.href = '/user/signup';") SIGN UP
+                        button.btn.btn-sm.btn-primary(onclick="location.href = '/users/signup';") SIGN UP
 
         
-        .container-fki
+        .bg-secondary
             br
-            //- != messages('message', locals)
-            //- if errors
-            //-     each error, _ in errors
-            //-         div(class="alert alert-danger") #{error.msg}
             .container
-                .container-normal
-                    br
-                    block content
-                    br
-                hr
-                footer
-                    p Copyright &copy; fki-reddit
+                //- != messages('message', locals)
+                //- if errors
+                //-     each error, _ in errors
+                //-         div(class="alert alert-danger") #{error.msg}
+            
+                br
+                block content
+                br
+                br
+        .container
+            hr
+            footer
+                p Copyright &copy; fki-reddit
 
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js')
