--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html
             ul.navbar-nav
                 if user
                     li.nav-item
-                        a.nav-link(href='/posts/add') Create Post
+                        a.nav-link(href='/posts/create') Create Post
                 else
                     li.nav-item
                         a.nav-link(href='/users/signup') Create Post
