--- a/views/login.pug
+++ b/views/login.pug
@@ -15,5 +15,5 @@ block content
                 label(for='password') Password:
                 input#password.form-control(type='password', placeholder='Enter password', name='password', required='')
             .d-flex.justify-content-center
-                button.btn.btn-primary(type='submit') Submit
+                button.btn.btn-primary.btn-block(type='submit') Submit
         br
