--- a/views/login.pug
+++ b/views/login.pug
@@ -16,4 +16,6 @@ block content
                 input#password.form-control(type='password', placeholder='Enter password', name='password', required='')
             .d-flex.justify-content-center
                 button.btn.btn-primary.btn-block(type='submit') Submit
+        p Dont have an account?
+            a(href="signup")  Sign Up
         br
