--- a/views/signup.pug
+++ b/views/signup.pug
@@ -24,5 +24,7 @@ block content
                 label(for='password2') Confirm Password:
                 input.form-control(type='password', placeholder='Confirm Password', name='password2', required='')
             .d-flex.justify-content-center
-                button.btn.btn-primary(type='submit') Submit
+                button.btn.btn-primary.btn-block(type='submit') Submit
+        p Already have an account?
+            a(href="login")  Login
         br
