--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css')
-        link(rel="stylesheet", href="style.css")
+        link(rel="stylesheet", href="/style.css")
 
     body
         nav.navbar.navbar-expand.navbar-light
@@ -36,10 +36,11 @@ html
         .bg-secondary
             br
             .container
-                //- != messages('message', locals)
-                //- if errors
-                //-     each error, _ in errors
-                //-         div(class="alert alert-danger") #{error.msg}
+                .container.col-md-6
+                    != messages('message', locals)
+                    if errors
+                        each error, _ in errors
+                            div(class="alert alert-danger") #{error.msg}
             
                 br
                 block content
