--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,15 +15,15 @@ html
             ul.navbar-nav
                 if user
                     li.nav-item
-                        a.nav-link(href='/posts/create') Create Post
+                        a.nav-link.text-primary(href='/posts/create') Create Post
                 else
                     li.nav-item
                         a.nav-link(href='/users/login') Create Post
 
             ul.navbar-nav.ml-auto
                 if user
-                    li.nav-item.ml-1.my-1.mr-2
-                        button.btn.btn-sm.btn-outline-primary(onclick="location.href = '/posts/myposts';") My Posts
+                    li.nav-item.mr-1
+                        a.nav-link.text-primary(href="/posts/myposts") My Posts
                     li.nav-item.ml-auto.my-1.mr-1
                         button.btn.btn-sm.btn-danger(onclick="location.href = '/users/logout';") Logout
                 else
