--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-    p home page
-    ul.list-group
+    .list-group
         each a, _ in posts
-            li.list-group-item
-                a(href="/posts/"+a._id)= a.title
+            br
+            label
+                a.list-group-item(href="/posts/"+a._id)= a.title
