--- a/views/post.pug
+++ b/views/post.pug
@@ -1,18 +1,19 @@
 extends layout
 
 block content
-    .container.col-md-10.bg-light
-        br
-        h1= post.title
-        p Written by #{author}
-        br
-        p= post.body
-        if user
-            if user.id == post.author 
-                hr
-                a(href="/post/edit/"+post._id) Edit
-                br
-                br
-                a.btn.btn-danger.delete-post(href="#", data-id=post._id) Delete
-                br
-        br
+    .container.bg-light
+        .container.col-md-10.bg-light
+            br
+            h1= post.title
+            p Written by #{author}
+            br
+            p= post.body
+            if user
+                if user.id == post.author 
+                    hr
+                    a(href="edit/"+post._id) Edit
+                    br
+                    br
+                    a.btn.btn-danger.delete-post(href="delete/"+post._id) Delete
+                    br
+            br
