--- a/views/create_post.pug
+++ b/views/create_post.pug
@@ -8,11 +8,11 @@ block content
 
         form.was-validated(action="/posts/create" method="POST")
             .form-group
-                label(for='username') Title:
-                input#username.form-control(type='text', placeholder='A Relevant short title', name='title', required='')
+                label Title:
+                input.form-control(type='text', placeholder='A Relevant short title', name='title', required='')
             .form-group
-                label(for='password') Body:
-                textarea#password.form-control(type='text', placeholder='Post Body', name='body', required='')
+                label Body:
+                textarea.form-control(type='text', placeholder='Post Body', name='body', required='')
             .d-flex.justify-content-center
                 button.btn.btn-primary.btn-block(type='submit') Submit
         br
