--- a/views/layout.pug
+++ b/views/layout.pug
@@ -49,7 +49,7 @@ html
         .container
             hr
             footer
-                p Copyright &copy; fki-reddit
+                p &copy; fki-reddit
 
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js')
