--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
         link(rel="stylesheet", href="/style.css")
 
     body
-        nav.navbar.navbar-expand.navbar-light
+        nav.navbar.navbar-expand-sm.bg-dark.navbar-dark.fixed-top
 
             a.navbar-brand(href='/') fki-reddit
 
@@ -34,6 +34,8 @@ html
 
         
         .bg-secondary
+            br
+            br
             br
             .container
                 .container.col-md-6
