--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
         link(rel="stylesheet", href="/style.css")
 
     body
-        nav.navbar.navbar-expand-sm.bg-dark.navbar-dark.fixed-top
+        nav.navbar.navbar-expand.bg-dark.navbar-dark.fixed-top
 
             a.navbar-brand(href='/') fki-reddit
 
@@ -24,10 +24,10 @@ html
                 if user
                     li.nav-item.mr-1
                         a.nav-link.text-primary(href="/posts/myposts/"+user.username) My Posts
-                    li.nav-item.ml-auto.my-1.mr-1
+                    li.nav-item.my-1.mr-1
                         button.btn.btn-sm.btn-danger(onclick="location.href = '/users/logout';") Logout
                 else
-                    li.nav-item.ml-auto.my-1.mr-1
+                    li.nav-item.my-1.mr-1
                         button.btn.btn-sm.btn-outline-primary.font-weight-bold(onclick="location.href = '/users/login';") LOGIN
                     li.nav-item.ml-1.my-1.mr-2
                         button.btn.btn-sm.btn-primary.font-weight-bold(onclick="location.href = '/users/signup';") SIGN UP
